<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="my.edu.tarc.studicash_0703.Fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/fragment_add"
        android:name="my.edu.tarc.studicash_0703.Fragment.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/fragment_profile"
        android:name="my.edu.tarc.studicash_0703.Fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/fragment_settings"
        android:name="my.edu.tarc.studicash_0703.Fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
